✍ "index.html" updated
🟠 Remplacement, temporaire, du logo « RF 2023 » sur le header [-> logo « RF 2023 » version noël 🔸].
🔴 Suppression, temporaire, de la barre horizontale noire en-dessous du header.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
       <header>
         <h1 class="headerTitle">Fiche de calcul des scrutins publics</h1>
         <div class="subtitleHeaderContainer">
-          <img
+          <!-- <img
             class="iconRF"
             src="./img/iconRF.jpg"
+            alt="Icône de référence : Discord « République française »"
+          /> -->
+          <!-- TODO Retirée car effet noël-->
+          <img
+            class="iconRF"
+            src="./img/iconRF_noel.png"
             alt="Icône de référence : Discord « République française »"
           />
           <h2 class="subtitleHeader">©️ @maxence21 - RF 2023 (Discord) ©️</h2>
@@ -34,7 +40,10 @@
           />
         </div>
       </header>
-      <div class="horizontalLine"></div>
+
+      <!-- <div class="horizontalLine"></div> -->
+      <!-- TODO Retirée car effet noël-->
+
       <!-- Form-->
       <section class="formContainer">
         <h2 class="formTitle">Renseignez les résultats</h2>
