✍ "index.html" updated
🔴 Suppression du logo « RF 2023 » sur le header [-> logo « RF 2023 » version noël 🔸].
🟢 Ajout de la barre horizontale noire en-dessous du header.

--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
       <header>
         <h1 class="headerTitle">Fiche de calcul des scrutins publics</h1>
         <div class="subtitleHeaderContainer">
-          <!-- <img
+          <img
             class="iconRF"
             src="./img/iconRF.jpg"
             alt="Icône de référence : Discord « République française »"
-          /> -->
-          <!-- TODO Retirée car effet noël-->
-          <img
+          />
+          <!-- TODO Effet noël-->
+          <!-- <img
             class="iconRF"
             src="./img/iconRF_noel.png"
             alt="Icône de référence : Discord « République française »"
-          />
+          /> -->
           <h2 class="subtitleHeader">©️ @maxence21 - RF 2023 (Discord) ©️</h2>
           <img
             class="iconAN"
@@ -41,8 +41,7 @@
         </div>
       </header>
 
-      <!-- <div class="horizontalLine"></div> -->
-      <!-- TODO Retirée car effet noël-->
+      <div class="horizontalLine"></div>
 
       <!-- Form-->
       <section class="formContainer">
