✍ "index.html" updated
🟠 Remplacement des logos par les nouveaux [-> RF 2024 🔸].
🟠 Déplacement de la mention copyright [-> création d'un footer 🔸].

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scrutins publics (RF - Assemblée nationale)</title>
-    <link rel="shortcut icon" href="./img/favicon.jpg" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,7 +23,7 @@
         <div class="subtitleHeaderContainer">
           <img
             class="iconRF"
-            src="./img/iconRF.jpg"
+            src="./img/iconRF.png"
             alt="Icône de référence : Discord « République française »"
           />
           <!-- TODO Effet noël-->
@@ -32,10 +32,9 @@
             src="./img/iconRF_noel.png"
             alt="Icône de référence : Discord « République française »"
           /> -->
-          <h2 class="subtitleHeader">©️ @maxence21 - RF 2024 (Discord) ©️</h2>
           <img
             class="iconAN"
-            src="./img/iconAN.jpg"
+            src="./img/iconAN.png"
             alt="Icône de référence : Discord « République française » (Assemblée nationale)"
           />
         </div>
@@ -58,7 +57,7 @@
             <span style="color: #e43c41; font-weight: bold">contre</span> :
             <input type="text" id="contre" name="votes_contre" required />
           </label>
-          <!-- ? Abstention-->
+          <!-- ? Abstentions-->
           <label for="abstention">
             <span style="color: #e76b2e; font-weight: bold">Abstentions</span> :
             <input type="text" id="abstention" name="abst" required />
@@ -77,6 +76,12 @@
           </div>
         </form>
       </section>
+
+      <!-- Footer-->
+      <h2 class="elementFooter">
+        <span class="copyrightIcon">©️</span> @maxence21 - RF 2024 (Discord)
+        <span class="copyrightIcon">©️</span>
+      </h2>
     </main>
     <script src="./script.js"></script>
   </body>
